// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render properly 1`] = `
<div>
  <label>
    Password
  </label>
  <span
    style={
      Object {
        "--iconsAfter": 0,
        "--iconsBefore": 0,
      }
    }
  >
    <span>
      <input
        name="password"
        onBlur={[Function]}
        onChange={[Function]}
        type="password"
        value=""
      />
    </span>
    <span />
    <span />
  </span>
  <p />
</div>
`;

exports[`should render toggle button if isToggleButtonHidden is false 1`] = `
<div>
  <label>
    Password
  </label>
  <span
    style={
      Object {
        "--iconsAfter": 1,
        "--iconsBefore": 0,
      }
    }
  >
    <span>
      <input
        name="password"
        onBlur={[Function]}
        onChange={[Function]}
        type="password"
        value=""
      />
    </span>
    <span />
    <span>
      <button
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <span>
          <svg
            fill="none"
            height="24"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"
            />
            <circle
              cx="12"
              cy="12"
              r="3"
            />
          </svg>
        </span>
      </button>
    </span>
  </span>
  <p />
</div>
`;
